--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Using Erlang for GPIO on a raspberry pi with pigpio http://abyz.co.uk/rpi/pigpio/ or  http://abyz.me.uk/rpi/pigpio/
+Using Erlang for GPIO on a raspberry pi with http://abyz.me.uk/rpi/pigpio/
